--- a/admin/templates/base.html
+++ b/admin/templates/base.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>{{ .Title }}</title>
     <link rel="stylesheet" href="/admin/static/admin.css" />
+    <script>
+      window.ADMIN_TZ = {{ printf "%q" .DisplayTimezone }};
+    </script>
     <script defer src="/admin/static/admin.js"></script>
   </head>
   <body>
