完善dsco拉单入库字段

--- a/admin/templates/orders.html
+++ b/admin/templates/orders.html
@@ -4,9 +4,7 @@
   <div class="card">
     <div class="row wrap">
       <input class="input" id="qPo" placeholder="po_number like" />
-      <input class="input" id="qDscoOrderId" placeholder="dsco_order_id" />
-      <input class="input" id="qConsumer" placeholder="consumer_order_number like" />
-      <input class="input" id="qChannel" placeholder="channel" />
+      <input class="input" id="qRetailer" placeholder="dsco_retailer_id" />
       <input class="input" id="qMSKU" placeholder="msku" />
       <input class="input" id="qStatus" placeholder="status (e.g. 1,2,3)" />
       <input class="input" id="qStartDT" type="datetime-local" />
@@ -32,6 +30,7 @@
           <th>status</th>
           <th>warehouse_id</th>
           <th>shipment</th>
+          <th>dsco_retailer_id</th>
           <th>tracking</th>
           <th>invoice_id</th>
         </tr>
