--- a/admin/templates/orders.html
+++ b/admin/templates/orders.html
@@ -27,6 +27,7 @@
           <th>id</th>
           <th>po_number</th>
           <th>dsco_create_time</th>
+          <th>dsco_status</th>
           <th>status</th>
           <th>warehouse_id</th>
           <th>shipment</th>
