优化订单列表显示sku

--- a/admin/templates/orders.html
+++ b/admin/templates/orders.html
@@ -45,6 +45,7 @@
           <th>warehouse_id</th>
           <th>shipment</th>
           <th>dsco_retailer_id</th>
+          <th>sku</th>
           <th>tracking</th>
           <th>invoice_id</th>
           <th>actions</th>
