--- a/admin/templates/orders.html
+++ b/admin/templates/orders.html
@@ -57,6 +57,8 @@
             <th>id</th>
             <th>po_number</th>
             <th>dsco_create_time</th>
+            <th>pulled_at</th>
+            <th>updated_at</th>
             <th>dsco_status</th>
             <th>status</th>
             <th>warehouse_id</th>
