--- a/admin/templates/orders.html
+++ b/admin/templates/orders.html
@@ -50,24 +50,24 @@
       <div class="spacer"></div>
       <div class="muted" id="ordersMeta"></div>
     </div>
+    <div class="row wrap" id="ordersColumns" style="margin-top: 10px;"></div>
     <div class="table-wrap">
       <table class="table table-tight" id="ordersTable">
         <thead>
           <tr>
-            <th>id</th>
-            <th>po_number</th>
-            <th>dsco_create_time</th>
-            <th>pulled_at</th>
-            <th>updated_at</th>
-            <th>dsco_status</th>
-            <th>status</th>
-            <th>warehouse_id</th>
-            <th>shipment</th>
-            <th>dsco_retailer_id</th>
-            <th>sku</th>
-            <th>tracking</th>
-            <th>invoice_id</th>
-            <th>actions</th>
+            <th data-col="id">id</th>
+            <th data-col="po_number">po_number</th>
+            <th data-col="dsco_create_time">dsco_create_time</th>
+            <th data-col="pulled_at">pulled_at</th>
+            <th data-col="updated_at">updated_at</th>
+            <th data-col="dsco_status">dsco_status</th>
+            <th data-col="status">status</th>
+            <th data-col="wh_ship">warehouse-shipment</th>
+            <th data-col="dsco_retailer_id">dsco_retailer_id</th>
+            <th data-col="sku">sku</th>
+            <th data-col="tracking">tracking</th>
+            <th data-col="invoice_id">invoice_id</th>
+            <th data-col="actions">actions</th>
           </tr>
         </thead>
         <tbody></tbody>
