--- a/admin/templates/orders.html
+++ b/admin/templates/orders.html
@@ -38,6 +38,7 @@
 
       <div class="filters-actions">
         <button class="btn" onclick="adminLoadOrders(0)">Search</button>
+        <button class="btn" onclick="adminCheckOrdersRange()">Check Range</button>
         <button class="btn" onclick="adminExportOrders()">Export CSV</button>
       </div>
     </div>
